homelab/speedtest-tracker/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker-internal
  namespace: homelab
spec:
  ingressClassName: traefik
  rules:
    - host: speedtest.oscargicast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  number: 80
